bizinikiwi/pezframe/support/test/tests/pezpallet_ui/authorize_wrong_closure.stderr
error[E0593]: closure is expected to take 2 arguments, but it takes 1 argument
  --> tests/pezpallet_ui/authorize_wrong_closure.rs:36:26
   |
36 |         #[pezpallet::authorize(|_| true)]
   |                                ^--
   |                                |
   |                                expected closure that takes 2 arguments
   |                                takes 1 argument
